--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".FilterActivity"
-            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"
-
-            ></activity>
+        <activity
+            android:name=".AfterLogin"
+            android:label="@string/title_activity_after_login"></activity>
+        <activity
+            android:name=".FilterActivity"
+            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" />
         <activity
             android:name=".DriverActivity"
             android:label="@string/title_activity_driver"
