--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".RouteDetailActivity"></activity>
-
+        <activity
+            android:name=".DriverTrip"
+            android:label="@string/title_activity_driver_trip"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".RouteDetailActivity" />
         <activity
             android:name=".AfterLogin"
-            android:label="@string/title_activity_after_login"></activity>
-
+            android:label="@string/title_activity_after_login" />
         <activity
             android:name=".FilterActivity"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" />
@@ -62,9 +63,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
     </application>
 
 </manifest>
